src/App.css
.App {
  text-align: center;
  display: flex;
  justify-content: center;
  margin-left: 1rem;
  margin-right: 1rem;
}

button {
  outline: none;
  border: none;
  box-shadow: 2px 0 2px currentColor;
  border-radius: 4px;
  min-height: 32px;
  min-width: 80px;
  padding: 4px 8px;
}

button:hover {
  opacity: 0.85;
}

input[type='checkbox'] {
  width: 24px;
  height: 24px;
  box-shadow: none;
  border: none;
  outline: none;
}

input[type='checkbox']:focus {
  box-shadow: none;
  border: none;
  outline: none;
}

input {
  min-height: 36px;
  border: none;
  outline: none;
  padding: 0 12px;
  box-shadow: 2px 0 4px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
}

input:focus {
  box-shadow: 1px 0 9px rgba(0, 0, 0, 0.25);
}

.ToDo__container {
  border: 1px solid rgba(0, 0, 0, 0.13);
  border-radius: 8px;
  width: 500px;
  margin-top: 5rem;
  padding: 24px;
  background-color: #fbe7c6;
}

.Todo__creation {
  display: flex;
}

.Todo__input {
  flex: 1 1;
}

.ToDo__list {
  display: flex;
  flex-direction: column;
  margin-top: 1.5rem;
}

.ToDo__item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #a0e7e5;
  margin-top: 0.5rem;
  padding: 0.2rem 0.7rem;
  border-radius: 3px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
}

.ToDo__item > span {
  flex: 1 1;
  text-align: left;
  margin-left: 8px;
  margin-right: 8px;
  padding: 0.2rem 0.5rem;
  height: 1.6rem;
  display: flex;
  align-items: center;
  overflow: clip;
  text-transform: capitalize;
}

.Todo__content {
  flex: 1 1;
}

.Todo__delete {
  outline: none;
  border: none;
  width: 32px;
  height: 32px;
  min-width: auto;
  min-height: auto;
  box-shadow: none;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.Todo__action,
.Todo__delete {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
  padding: 0;
  background-color: transparent;
}

.Todo__toolbar {
  display: flex;
  justify-content: space-between;
  margin-top: 24px;
  padding: 0.2rem 0.5rem;
}

.Todo__tabs {
  display: flex;
  justify-content: center;
}

.Todo__tabs > *:not(:last-child) {
  margin-right: 8px;
}

.Action__btn {
  padding: 0.5rem;
  font-size: 1rem;
  font-weight: 500;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  background-color: #b4f8c8;
  cursor: pointer;
  color: #3c3c3c;
}

.Action__btn:disabled,
.Action__btn[disabled] {
  background-color: #cccccc;
  color: #565656;
}

.Toolbar__toggle_all {
  display: flex;
  align-items: center;
}

.Toolbar__toggle_all > label {
  color: lightslategrey;
  margin-left: 5px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}

.item-enter {
  opacity: 0;
}
.item-enter-active {
  opacity: 1;
  transition: opacity 500ms;
}
.item-exit {
  opacity: 1;
}
.item-exit-active {
  opacity: 0;
  transition: all 600ms;
  transform: translateX(50%);
}

